Removed dependence on zlib

--- a/VS9/sigpro_dll.vcproj
+++ b/VS9/sigpro_dll.vcproj
@@ -148,7 +148,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="..\zlib"
-				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;SIGPRO_DLL_EXPORTS;_CRT_SECURE_NO_WARNINGS;ZLIB"
+				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;SIGPRO_DLL_EXPORTS;_CRT_SECURE_NO_WARNINGS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
