--- a/makefile.mac
+++ b/makefile.mac
@@ -1,8 +1,11 @@
 # makefile for SIGPRO on Mac
 
 # remove -DZLIB & -lz to compile without zlib
-CFLAGS=-Wall -I$(INCDIR) -DZLIB
-LIBS=-lm -lz
+#CFLAGS=-Wall -I$(INCDIR) -DZLIB
+#LIBS=-lm -lz
+CFLAGS=-Wall -I$(INCDIR)
+LIBS=-lm
+
 CC=gcc -arch i386
 SIGPRO_O= fft.o rcfft.o crfft.o cdb.o linspace.o rand.o randflat.o \
     fftfilt.o freqshape.o scalar.o vector.o interp.o convert.o window.o \
