Removed dependence on zlib.

--- a/VS9/sigpro_dll.vcproj
+++ b/VS9/sigpro_dll.vcproj
@@ -51,7 +51,7 @@
 				Optimization="2"
 				InlineFunctionExpansion="1"
 				AdditionalIncludeDirectories="../zlib"
-				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;SIGPRO_DLL_EXPORTS;_CRT_SECURE_NO_WARNINGS;ZLIB"
+				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;SIGPRO_DLL_EXPORTS;_CRT_SECURE_NO_WARNINGS"
 				StringPooling="true"
 				RuntimeLibrary="0"
 				EnableFunctionLevelLinking="true"
