--- a/VS9/sigpro_lib.vcproj
+++ b/VS9/sigpro_lib.vcproj
@@ -45,7 +45,7 @@
 				Optimization="2"
 				InlineFunctionExpansion="1"
 				AdditionalIncludeDirectories="../zlib"
-				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;ZLIB;_CRT_SECURE_NO_WARNINGS"
+				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;_CRT_SECURE_NO_WARNINGS"
 				StringPooling="true"
 				RuntimeLibrary="0"
 				EnableFunctionLevelLinking="true"
