--- a/makefile.arm
+++ b/makefile.arm
@@ -8,7 +8,7 @@ AR=arm-linux-gnueabihf-ar
 SIGPRO_O= fft.o rcfft.o crfft.o cdb.o linspace.o rand.o randflat.o \
     fftfilt.o freqshape.o scalar.o vector.o interp.o convert.o window.o \
     matvar.o filter.o anafilt.o wavrw.o fmins.o version.o tictoc.o
-LIBDIR=/usr/local/lib
+LIBDIR=/usr/local/lib/arm
 INCDIR=/usr/local/include
 BINDIR=/usr/local/bin
 TST= rdmat tst_fft tst_shp tst_src tst_mat tst_wav tst_afd tst_xfr tst_min \
