--- a/makefile.mac
+++ b/makefile.mac
@@ -60,7 +60,7 @@ rdmat : rdmat.o libsigpro.a
 	$(CC) $(CFLAGS) -o $@ $^ $(LIBS)
 
 libsigpro.a: $(SIGPRO_O)
-	ar rus libsigpro.a $(SIGPRO_O)
+	ar rs libsigpro.a $(SIGPRO_O)
 
 $(LIBDIR)/libsigpro.a : libsigpro.a
 	mkdir -p $(LIBDIR)
