--- a/makefile.mac
+++ b/makefile.mac
@@ -63,16 +63,16 @@ libsigpro.a: $(SIGPRO_O)
 	ar rs libsigpro.a $(SIGPRO_O)
 
 $(LIBDIR)/libsigpro.a : libsigpro.a
-	mkdir -p $(LIBDIR)
-	cp -f libsigpro.a $(LIBDIR)
+	sudo mkdir -p $(LIBDIR)
+	sudo cp -f libsigpro.a $(LIBDIR)
 
 $(INCDIR)/sigpro.h : sigpro.h
-	mkdir -p $(INCDIR)
-	cp -f sigpro.h $(INCDIR)
+	sudo mkdir -p $(INCDIR)
+	sudo cp -f sigpro.h $(INCDIR)
 
 $(BINDIR)/rdmat : rdmat
-	mkdir -p $(BINDIR)
-	cp -f rdmat $(BINDIR)
+	sudo mkdir -p $(BINDIR)
+	sudo cp -f rdmat $(BINDIR)
 
 install: $(BINDIR)/rdmat $(LIBDIR)/libsigpro.a $(INCDIR)/sigpro.h
 
