--- a/makefile.arm
+++ b/makefile.arm
@@ -1,7 +1,7 @@
 # makefile for SIGPRO cross-compilation to Linux/ARM
 
 # Note: remove -DZLIB & -lz to compile without zlib
-CFLAGS=-Wall -I$(INCDIR) -fPIC
+CFLAGS=-Wall -I$(INCDIR) -Wno-unused-local-typedef -fPIC
 LIBS=-lm
 CC=arm-linux-gnueabihf-gcc
 AR=arm-linux-gnueabihf-ar
