--- a/makefile.mac
+++ b/makefile.mac
@@ -1,7 +1,7 @@
 # makefile for SIGPRO on Mac
 
 # Note: remove -DZLIB & -lz to compile without zlib
-CFLAGS=-Wall -I$(INCDIR) -DZLIB
+CFLAGS=-Wall -I$(INCDIR) -Wno-unused-local-typedef -DZLIB
 LIBS=-lm -lz
 CC=gcc
 SIGPRO_O= fft.o rcfft.o crfft.o cdb.o linspace.o rand.o randflat.o \
