--- a/makefile.lnx
+++ b/makefile.lnx
@@ -94,7 +94,7 @@ dist: zipsrc zipdll
 
 clean:
 	rm -f *.o *.obj *.bak *.a *.exe $(PGMS)
-	rm -f *.txt *.log *.mat *~ *.wav
+	rm -f *.txt *.log *.mat *~ *.wav *.so
 
 # dependencies
 anafilt.o:sigpro.h
