--- a/makefile.mac
+++ b/makefile.mac
@@ -6,7 +6,8 @@ LIBS=-lm -lz
 CC=gcc
 SIGPRO_O= fft.o rcfft.o crfft.o cdb.o linspace.o rand.o randflat.o \
     fftfilt.o freqshape.o scalar.o vector.o interp.o convert.o window.o \
-    matvar.o filter.o anafilt.o wavrw.o fmins.o version.o tictoc.o
+    matvar.o filter.o anafilt.o wavrw.o fmins.o fminsearch.o version.o \
+    tictoc.o
 LIBDIR=/usr/local/lib
 INCDIR=/usr/local/include
 BINDIR=/usr/local/bin
