--- a/makefile.djc
+++ b/makefile.djc
@@ -1,34 +1,30 @@
-# makefile for SIGPRO using MinGW
+# makefile for SIGPRO using DJGCC 
 
-# Note: remove -DZLIB & -lz to compile without zlib
-CFLAGS=-Wall -I$(INCDIR) -Wno-unused-local-typedefs -DZLIB 
-
+# remove -DZLIB & -lz to compile without zlib
+CFLAGS=-Wall -I$(INCDIR) -DZLIB
 LIBS=-lm -lz
 CC=gcc
 AR=ar
-SIGPRO_1= fft.o rcfft.o crfft.o cdb.o linspace.o rand.o randflat.o
-SIGPRO_2= fftfilt.o freqshape.o scalar.o vector.o interp.o convert.o window.o
-SIGPRO_3= matvar.o filter.o anafilt.o wavrw.o fmins.o fminsearch.o version.o
-SIGPRO_4= tictoc.o
-SIGPRO_O= $(SIGPRO_1) $(SIGPRO_2) $(SIGPRO_3) $(SIGPRO_4)
+SIGPRO_O= fft.o rcfft.o crfft.o cdb.o linspace.o rand.o randflat.o \
+    fftfilt.o freqshape.o scalar.o vector.o interp.o convert.o window.o \
+    matvar.o filter.o anafilt.o wavrw.o fmins.o version.o
 LIBDIR=c:/usr/lib
 INCDIR=c:/usr/include
 BINDIR=c:/usr/bin
 PGMS= rdmat tst_fft tst_shp tst_src tst_mat tst_wav tst_afd tst_xfr tst_min \
-	tst_cpx tst_tb
+    tst_tb # tst_cpx not supported by DJCC
 
 test : $(PGMS)
-	./tst_shp
-	./tst_src
-	./tst_fft
-	diff -s tst_fft.mgw tst_fft.txt
-	./tst_mat
-	./tst_wav
-	./tst_afd
-	./tst_xfr
-	./tst_min
-	./tst_cpx
-	./tst_tb
+	tst_shp
+	tst_src
+	tst_fft > tst_fft.txt
+	diff -s tst_fft.djc tst_fft.txt
+	tst_mat
+	tst_wav
+	tst_afd
+	tst_xfr
+	tst_min
+	tst_tb
 
 tst_fft : tst_fft.o libsigpro.a
 	$(CC) $(CFLAGS) -o $@ $^ $(LIBS)
@@ -57,27 +53,22 @@ tst_xfr : tst_xfr.o libsigpro.a
 tst_min : tst_min.o libsigpro.a
 	$(CC) $(CFLAGS) -o $@ $^ $(LIBS)
 
-tst_cpx : tst_cpx.o libsigpro.a
-	$(CC) $(CFLAGS) -o $@ $^ $(LIBS)
-
 rdmat : rdmat.o libsigpro.a
 	$(CC) $(CFLAGS) -o $@ $^ $(LIBS)
 
 libsigpro.a: $(SIGPRO_O) 
-	$(AR) rs libsigpro.a $(SIGPRO_1)
-	$(AR) rs libsigpro.a $(SIGPRO_2)
-	$(AR) rs libsigpro.a $(SIGPRO_3)
-	$(AR) rs libsigpro.a $(SIGPRO_4)
+	$(AR) rus libsigpro.a $(SIGPRO_O)
 
 install: libsigpro.a rdmat
+	mkdir -p $(LIBDIR) $(INCDIR) $(BINDIR)
 	cp -f libsigpro.a $(LIBDIR)
 	cp -f sigpro.h $(INCDIR)
 	cp -f rdmat.exe $(BINDIR)
 
 zipsrc:
-	zip sigprosc *.mgw *.lnx *.mac
+	zip sigprosc *.djc *.lnx *.mac
 	zip sigprosc *.h *.c *.plt *.std *.m *.def
-	zip sigprosc VS16/*.sln VS16/*.vcxproj test/*
+	zip sigprosc VS9/*.sln VS9/*.vcproj test/*
 	zip sigprosc configure configure.bat
 
 zipdll:
@@ -89,8 +80,7 @@ dist: zipsrc zipdll
 	rm -f *.zip
 
 clean:
-	rm -f *.o *.obj *.bak *.a *.exe $(PGMS)
-	rm -f *.txt *.log *.mat *~ *.wav *.so
+	rm -f *.o *.obj *.bak *.a *.exe $(PGMS) *.txt *.log *.mat *~ *.wav
 
 # dependencies
 anafilt.o:sigpro.h
@@ -118,7 +108,6 @@ tst_shp.o:sigpro.h
 tst_src.o:sigpro.h
 tst_wav.o:sigpro.h
 tst_xfr.o:sigpro.h
-tst_cpx.o : sigpro.h
 tst_tb.o : sigpro.h
 vector.o:sigpro.h
 version.o:sigpro.h version.h
