--- a/VS16/sigpro_dll.vcxproj
+++ b/VS16/sigpro_dll.vcxproj
@@ -64,6 +64,7 @@
     <ClCompile>
       <Optimization>MaxSpeed</Optimization>
       <InlineFunctionExpansion>OnlyExplicitInline</InlineFunctionExpansion>
+      <AdditionalIncludeDirectories>../zlib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;SIGPRO_DLL_EXPORTS;_CRT_SECURE_NO_WARNINGS;ZLIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PrecompiledHeaderOutputFile>.\Release/sigpro_dll.pch</PrecompiledHeaderOutputFile>
       <AssemblerListingLocation>$(IntDir)</AssemblerListingLocation>
@@ -73,15 +74,13 @@
       <WarningLevel>Level3</WarningLevel>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
-      <DebugInformationFormat>None</DebugInformationFormat>
-      <AdditionalIncludeDirectories>..\zlib</AdditionalIncludeDirectories>
     </ClCompile>
     <ResourceCompile>
       <PreprocessorDefinitions>NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <Culture>0x0409</Culture>
     </ResourceCompile>
     <Link>
-      <OutputFile>$(TargetPath)</OutputFile>
+      <OutputFile>$(IntDir)sigpro.dll</OutputFile>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <ModuleDefinitionFile>..\sigpro.def</ModuleDefinitionFile>
       <ProgramDatabaseFile>.\Release/sigpro.pdb</ProgramDatabaseFile>
@@ -96,8 +95,9 @@
     </Bscmake>
     <PostBuildEvent>
       <Message>Copy sigpro.dll</Message>
-      <Command>Copy $(TargetPath) .\Release\sigpro.dll
-Copy $(TargetPath) c:\usr\lib\sigpro.dll
+      <Command>mkdir c:\usr\lib
+mkdir c:\usr\include
+Copy $(IntDir)sigpro.dll c:\usr\lib
 Copy ..\sigpro.h c:\usr\include
 </Command>
     </PostBuildEvent>
@@ -113,7 +113,7 @@ Copy ..\sigpro.h c:\usr\include
     </Midl>
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>..\zlib</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\zlib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USRDLL;SIGPRO_DLL_EXPORTS;_CRT_SECURE_NO_WARNINGS;ZLIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <BasicRuntimeChecks>Default</BasicRuntimeChecks>
       <PrecompiledHeaderOutputFile>.\Debug/sigpro_dll.pch</PrecompiledHeaderOutputFile>
