--- a/VS16/sigpro_lib.vcxproj
+++ b/VS16/sigpro_lib.vcxproj
@@ -54,6 +54,7 @@
     <ClCompile>
       <Optimization>MaxSpeed</Optimization>
       <InlineFunctionExpansion>OnlyExplicitInline</InlineFunctionExpansion>
+      <AdditionalIncludeDirectories>../zlib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;ZLIB;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PrecompiledHeaderOutputFile>.\Release/sigpro_lib.pch</PrecompiledHeaderOutputFile>
       <AssemblerListingLocation>$(IntDir)</AssemblerListingLocation>
@@ -63,8 +64,6 @@
       <WarningLevel>Level3</WarningLevel>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
-      <DebugInformationFormat>None</DebugInformationFormat>
-      <AdditionalIncludeDirectories>..\zlib</AdditionalIncludeDirectories>
     </ClCompile>
     <ResourceCompile>
       <PreprocessorDefinitions>NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -80,9 +79,9 @@
     </Bscmake>
     <PostBuildEvent>
       <Message>Install SIGPRO</Message>
-      <Command>Copy $(TargetPath) ..\..\lib
-Copy $(TargetPath) c:\usr\lib
-Copy ..\sigpro.h ..\..\include
+      <Command>mkdir c:\usr\lib
+mkdir c:\usr\include
+Copy $(IntDir)sigpro.lib c:\usr\lib
 Copy ..\sigpro.h c:\usr\include
 </Command>
     </PostBuildEvent>
@@ -90,7 +89,7 @@ Copy ..\sigpro.h c:\usr\include
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>..\zlib</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\zlib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;ZLIB;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <BasicRuntimeChecks>Default</BasicRuntimeChecks>
       <PrecompiledHeaderOutputFile>.\Debug/sigpro_lib.pch</PrecompiledHeaderOutputFile>
