--- a/makefile.mgw
+++ b/makefile.mgw
@@ -77,7 +77,7 @@ install: libsigpro.a rdmat
 zipsrc:
 	zip sigprosc *.mgw *.lnx *.mac
 	zip sigprosc *.h *.c *.plt *.std *.m *.def
-	zip sigprosc VS16/*.sln VS16/*.vcxproj test/*
+	zip sigprosc VS16/*.sln VS16/*.vcxproj VS16/*.filters test/*
 	zip sigprosc configure configure.bat
 
 zipdll:
