--- a/makefile.mac
+++ b/makefile.mac
@@ -1,9 +1,10 @@
-# makefile for SIGPRO on Mac
+# makefile for SIGPRO under Linux
 
 # Note: remove -DZLIB & -lz to compile without zlib
-CFLAGS=-Wall -I$(INCDIR) -Wno-unused-local-typedef -DZLIB
+CFLAGS=-Wall -I$(INCDIR) -DZLIB -Wno-unused-local-typedef -fPIC
 LIBS=-lm -lz
 CC=gcc
+AR=ar
 SIGPRO_O= fft.o rcfft.o crfft.o cdb.o linspace.o rand.o randflat.o \
     fftfilt.o freqshape.o scalar.o vector.o interp.o convert.o window.o \
     matvar.o filter.o anafilt.o wavrw.o fmins.o fminsearch.o version.o \
@@ -11,17 +12,19 @@ SIGPRO_O= fft.o rcfft.o crfft.o cdb.o linspace.o rand.o randflat.o \
 LIBDIR=/usr/local/lib
 INCDIR=/usr/local/include
 BINDIR=/usr/local/bin
-PGMS= rdmat tst_fft tst_shp tst_src tst_mat tst_wav tst_afd tst_xfr tst_min \
-	tst_cpx tst_tb
+TST= rdmat tst_fft tst_shp tst_src tst_mat tst_wav tst_afd tst_xfr tst_min \
+    tst_cpx tst_tb tst_bbf
+PGMS= $(TST) rdmat
 
 test : $(PGMS)
 	./tst_shp
 	./tst_src
-	./tst_fft > tst_fft.txt
-	diff -s tst_fft.mac tst_fft.txt
+	./tst_fft
+	diff -s tst_fft.lnx tst_fft.txt
 	./tst_mat
 	./tst_wav
 	./tst_afd
+	./tst_bbf
 	./tst_xfr
 	./tst_min
 	./tst_cpx
@@ -48,6 +51,9 @@ tst_tb : tst_tb.o libsigpro.a
 tst_afd : tst_afd.o libsigpro.a
 	$(CC) $(CFLAGS) -o $@ $^ $(LIBS)
 
+tst_bbf : tst_bbf.o libsigpro.a
+	$(CC) $(CFLAGS) -o $@ $^ $(LIBS)
+
 tst_xfr : tst_xfr.o libsigpro.a
 	$(CC) $(CFLAGS) -o $@ $^ $(LIBS)
 
@@ -61,7 +67,7 @@ rdmat : rdmat.o libsigpro.a
 	$(CC) $(CFLAGS) -o $@ $^ $(LIBS)
 
 libsigpro.a: $(SIGPRO_O)
-	ar rs libsigpro.a $(SIGPRO_O)
+	$(AR) rs libsigpro.a $(SIGPRO_O)
 
 $(LIBDIR)/libsigpro.a : libsigpro.a
 	mkdir -p $(LIBDIR)
@@ -80,10 +86,11 @@ install: $(BINDIR)/rdmat $(LIBDIR)/libsigpro.a $(INCDIR)/sigpro.h
 zipsrc:
 	zip sigprosc *.mgw *.lnx *.mac
 	zip sigprosc *.h *.c *.plt *.std *.m *.def
-	zip sigprosc VS16/*.sln VS16/*.vcxproj VS16/*.filters test/*
+	zip sigprosc VS16/*.sln VS16/*.vcxproj test/*.mat
+	zip sigprosc configure configure.bat
 
 zipdll:
-	zip -j sigprdll c:/usr/lib/sigpro.dll
+	zip -j sigprdll VS16/Release/sigpro.dll
 	zip -j sigprdll sigpro.h
 
 dist: zipsrc zipdll
@@ -91,7 +98,8 @@ dist: zipsrc zipdll
 	rm -f *.zip
 
 clean:
-	rm -f *.o *.obj *.bak *.a *.exe $(PGMS) *.txt *.log *.mat *~ *.wav *.so
+	rm -f *.o *.obj *.bak *.a *.exe $(PGMS)
+	rm -f *.txt *.log *.mat *~ *.wav *.so
 
 # dependencies
 anafilt.o:sigpro.h
@@ -111,13 +119,14 @@ rcfft.o:sigpro.h
 scalar.o:sigpro.h
 sptest.o:sigpro.h
 tst_afd.o:sigpro.h
+tst_bbf.o:sigpro.h
 tst_cpx.o:sigpro.h
-tst_wav.o:sigpro.h
 tst_fft.o:sigpro.h
 tst_mat.o:sigpro.h
 tst_min.o:sigpro.h
 tst_shp.o:sigpro.h
 tst_src.o:sigpro.h
+tst_wav.o:sigpro.h
 tst_xfr.o:sigpro.h
 vector.o:sigpro.h
 version.o:sigpro.h version.h
