--- a/makefile.lnx
+++ b/makefile.lnx
@@ -99,7 +99,7 @@ dist: zipsrc zipdll
 
 clean:
 	rm -f *.o *.obj *.bak *.a *.exe $(PGMS)
-	rm -f *.txt *.log *.mat *~ *.wav *.so
+	rm -f *.txt *.log *.mat *~ *.wav *.so test/*.mat
 
 # dependencies
 anafilt.o:sigpro.h
