--- a/makefile.mac
+++ b/makefile.mac
@@ -86,7 +86,7 @@ install: $(BINDIR)/rdmat $(LIBDIR)/libsigpro.a $(INCDIR)/sigpro.h
 zipsrc:
 	zip sigprosc *.mgw *.lnx *.mac
 	zip sigprosc *.h *.c *.plt *.std *.m *.def
-	zip sigprosc VS16/*.sln VS16/*.vcxproj test/*.mat
+	zip sigprosc VS16/*.sln VS16/*.vcxproj VS16/*.filters test/*.mat
 	zip sigprosc configure configure.bat
 
 zipdll:
